# ANN-Samples-Library

./: .gitignore  CMakeLists.txt  README.md
01-codemate-agentic-rag/: README.md
01-codemate-agentic-rag/agentic_rag/: __init__.py  index.py  ingestion.py  models.py  pipeline.py  retrieval.py  store.py
01-codemate-agentic-rag/examples/: index_repo.py  query_repo.py  run_demo.py
01-codemate-agentic-rag/tests/: test_pipeline.py  test_retrieval.py
02-milvus-knowhere-kernel/: CMakeLists.txt  README.md
02-milvus-knowhere-kernel/include/: async_graph_searcher.h  graph_types.h  topk_reducer.h
02-milvus-knowhere-kernel/src/: async_graph_searcher.cpp  demo.cpp  topk_reducer.cpp
03-opengauss-vector-engine/: CMakeLists.txt  README.md
03-opengauss-vector-engine/include/: diskann_scheduler.h  dual_engine_index.h  opq_rabitq.h  versioned_graph.h
03-opengauss-vector-engine/src/: demo.cpp  diskann_scheduler.cpp  dual_engine_index.cpp  opq_rabitq.cpp  versioned_graph.cpp
HNSW-RabitQ/: HNSW-RabitQ.md  hnsw_rabitq_build.cpp  hnsw_rabitq_scan.cpp  neon_fastscan.cpp  pg_rabitq.h  rabitq_quantizer.cpp  rabitq_quantizer.h
IVF-HSP/: IVFHSP.md  NpuIndexIVFHSP.h  NpuIndexIVFHSP_Pipeline.cpp  NpuIndexIVFHSP_Search.cpp  NpuIndexIVFHSP_SearchBatch.cpp  NpuIndexIVFHSP_SearchImpl.cpp  common_types.h
Lazer-Attention/: LA_attention.md  addressing.h  attention_kernel.cpp  constants.h  cube_operations.h  vector_operations.h
legacy/HNSW-RabitQ/: pg_rabitq.h  rabitq_quantizer.cpp
legacy/IVF-HSP/: NpuIndexIVFHSP_Search.cpp  NpuIndexIVFHSP_SearchImpl.cpp
(+2 files in other folders)
